
2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* warning.def, cobc.h: allow -Wno-other to suppress messages generated
	  because of "COBC_WARN_FILLER"
	* warning.def, error.c, typeck.c: allow -Wno-dialect to suppress messages
	  generated because of dialect option value "warning"

2017-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: fixed bug #458 by adding error handling for copybooks
	  that couldn't be opened because of external limits

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: check missing evaluation of command line option;
	  code-coverage specific changes

2017-10-25  Ron Norman <rjn@inglenet.com>

	* typeck.c (validate_move invalid:) fixed bug #225 report
	  'invalid SET statement' when appropriate

2017-10-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: specify all generated source files in BUILT_SOURCES
	  that have to be built _before_ other sources, fixing parallel builds

2017-10-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: fixed bug #454 suspicious warning with actual working
	  CURRENCY SIGN, better error messages for this clause
	* error.c, cobc.c: changed message format back to old version,
	  see bug #455
	* typeck.c: fixed bug #266 - false error on duplicate characters in
	  class definition
	* parser.y: added *parsing* for COBOL2002 options to specify class type
	  and referenced alphabet in SPECIAL-NAMES, CLASS clause

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452
	* cobc.c: minimal support for DJGGP, including generation of 8.3 filenames
	* cobc.c: don't halt immediately on first PATH error during startup,
	  postponed until command line arguments are processed

2017-10-14  Edward Hart <edward.dan.hart@gmail.com>
